[package]
name = "secure-pass-api-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
serde = "1.0.148"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.1"
tokio = "1.26.0"
dotenv = "0.15.0"
